# Taxi_cost_formula_prediction

./: .env  .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  OCR_part.pyw  README.md  config.json  data.pkl  docker-compose.yml  env_template.env  get_addresses.pyw  macros.ahk  macros.pmc  pyproject.toml  requirements.txt  stored_address.pickle  transfer_file.txt
data/: all_addresses.txt  data.csv
taxi/data/: get_random_address.py  mine_taxi_website.py  mine_weather.py
taxi/features/: OCR_part.pyw  launch_datamining.py
