[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "taxi"
version = "0.0.1"
description = "Reverse engineering for UBER's taxi cost formula"
authors = [{ name = "Kalmykov Alexey" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/settings/*"]
src_paths = ["./taxi"]

[tool.mypy]
mypy_path = "./taxi"
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[mypy-pyproj.*]
ignore_missing_imports = True

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "./taxi"

[tool.ruff.lint.isort]
known_first_party = ["taxi"]
force_sort_within_sections = true

[tool.flake8]
max-line-length = 79
extend-ignore = ["E501", "E203", "W503"]
per-file-ignores = ["settings*.py:E402,F403,F405"]
exclude = [
  ".git",
  "__pycache__",
  ".tox",
  ".eggs",
  "*.egg",
  ".venv"
]
