[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "taxi"
version = "0.0.1"
description = "Reverse engineering for UBER's taxi cost formula"
authors = [{ name = "Kalmykov Alexey" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", ]
requires-python = ">=3.10"

[tool.black]
line-length = 94
include = '\.py$'
exclude = '''\.git|\.venv'''

[tool.isort]
profile = "black"
line_length = 94
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/settings/*"]
src_paths = ["./taxi"]

[tool.mypy]
mypy_path = "taxi"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.ruff.lint.isort]
known_first_party = ["taxi"]
force_sort_within_sections = true

[tool.flake8]
max-line-length = 94
extend-ignore = ["E501", "E203", "W503"]
per-file-ignores = ["settings*.py:E402,F403,F405"]
include = '\.py$'
exclude = [
  ".git",
  "__pycache__",
  ".tox",
  ".eggs",
  "*.egg",
  ".venv",
  "*.toml"]
